feat: actualización del sitio web

--- a/columnas/ia.html
+++ b/columnas/ia.html
@@ -213,7 +213,10 @@
     </div>
   </div>
 
-  <footer>© Guillermo Garcia Muela. Todos los derechos reservados.</footer>
+    <footer>
+    <p>© Guillermo Garcia Muela.</p>
+    <p>Todos los derechos reservados.</p>
+  </footer>
 
   <script>
     function mostrarIframe(id){
