--- a/columnas/sociedad.html
+++ b/columnas/sociedad.html
@@ -193,7 +193,10 @@
     </div>
   </div>
 
-  <footer>© Guillermo Garcia Muela. Todos los derechos reservados.</footer>
+    <footer>
+    <p>© Guillermo Garcia Muela.</p>
+    <p>Todos los derechos reservados.</p>
+  </footer>
 
   <script>
     function mostrarIframe(id){
