--- a/columnas/ia.html
+++ b/columnas/ia.html
@@ -1,143 +1,149 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>IA</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>IA</title>
 
-<style>
-  /* ====== FONDO (PC) ====== */
-  body{
-    margin:0;
-    padding:0;
-    background: url("../img/fondo2.png") center center / cover no-repeat fixed;
-    color:#f5e0b8;
-    font-family: Arial, sans-serif;
-    min-height:100vh;
-    overflow-y:auto;
-  }
-
-  /* ====== CONTENEDOR ====== */
-  .container{
-    max-width: 820px;           /* más estrecho que antes */
-    margin: 32px auto;          /* menos margen */
-    padding: 28px 18px;         /* menos padding */
-    background: rgba(0,0,0,.55);
-    border-radius: 12px;
-    box-sizing: border-box;
-  }
-
-  h1{
-    text-align:center;
-    margin: 0 0 22px;
-    font-size: 1.9rem;          /* un poco más compacto */
-    line-height:1.15;
-  }
-
-  .menu{ text-align:center; margin-bottom:18px; }
-  .menu a{
-    text-decoration:none;
-    color:#f5e0b8;
-    border:2px solid #f5e0b8;
-    padding:8px 18px;
-    border-radius:6px;
-    transition:.2s;
-  }
-  .menu a:hover{ background:#f5e0b8; color:#2c1a08; }
-
-  /* ====== TARJETAS ====== */
-  .columnas{
-    margin-bottom:16px;         /* menos separación */
-    padding:12px 14px;          /* más estrecha */
-    border:1px solid #f5e0b8;
-    border-radius:10px;
-    background: rgba(0,0,0,.38);
-    cursor:pointer;
-    transition: background .25s ease, transform .15s ease;
-  }
-  .columnas:hover{ background: rgba(245,224,184,.16); }
-  .columnas h2{
-    font-size:1.05rem;
-    line-height:1.25;
-    margin:0 0 6px;
-  }
-  .columnas p{
-    font-size:.92rem;
-    margin:0;
-    color:#d8c6a5;
-  }
-
-  /* ====== ÁREA DEL IFRAME ====== */
-  .iframe-container{
-    display:none;
-    margin-top:14px;
-  }
-
-  /* Fila de acciones (Abrir / Cerrar) sin floats */
-  .tools{
-    display:flex;
-    gap:8px;
-    justify-content:flex-end;
-    margin:10px 0;
-  }
-  .btn{
-    padding:8px 16px;
-    border:2px solid #f5e0b8;
-    border-radius:6px;
-    color:#f5e0b8;
-    background:transparent;
-    font-size:.9rem;
-    text-decoration:none;
-    cursor:pointer;
-    transition:.2s;
-  }
-  .btn:hover{ background:#f5e0b8; color:#2c1a08; }
-
-  iframe{
-    width:100%;
-    height:800px;
-    border:none;
-    display:block;
-    background:transparent; /* no “gris” alrededor */
-  }
-
-  footer{
-    text-align:center;
-    font-size:.8rem;
-    margin: 28px 0 18px;
-    color:#d8c6a5;
-    opacity:.85;
-  }
-
-  /* ====== MÓVIL ====== */
-  @media (max-width:600px){
-    /* Fondo diferente en móvil */
+  <style>
+    /* ====== FONDO (PC) ====== */
     body{
-      background-image: url("../img/fondocel2.png");
-      background-position: center top;
-      background-size: cover;
-      background-attachment: fixed;
-      background-color:#0b0a09; /* respaldo */
+      margin:0;
+      padding:0;
+      background: url("../img/fondo2.png") center center / cover no-repeat fixed;
+      color:#f5e0b8;
+      font-family: Arial, sans-serif;
+      min-height:100vh;
+      overflow-y:auto;
     }
 
+    /* ====== CONTENEDOR ====== */
     .container{
-      max-width: 90%;
-      padding: 20px 14px;
-      margin: 22px auto;
-      border-radius: 10px;
+      max-width: 820px;
+      margin: 32px auto;
+      padding: 28px 18px;
+      background: rgba(0,0,0,.55);
+      border-radius: 12px;
+      box-sizing: border-box;
     }
 
-    h1{ font-size: 1.6rem; margin-bottom:18px; }
-    .columnas{ padding:10px 12px; }
-    .columnas h2{ font-size: 1rem; }
-    .columnas p{ font-size: .9rem; }
+    h1{
+      text-align:center;
+      margin: 0 0 22px;
+      font-size: 1.9rem;
+      line-height:1.15;
+    }
 
-    .tools{ gap:6px; }
-    .btn{ padding:7px 14px; font-size:.88rem; }
+    .menu{ text-align:center; margin-bottom:18px; }
+    .menu a{
+      text-decoration:none;
+      color:#f5e0b8;
+      border:2px solid #f5e0b8;
+      padding:8px 18px;
+      border-radius:6px;
+      transition:.2s;
+    }
+    .menu a:hover{ background:#f5e0b8; color:#2c1a08; }
 
-    iframe{ height: 70vh; }   /* más compacto en móvil */
-  }
-</style>
+    /* ====== TARJETAS ====== */
+    .columnas{
+      margin-bottom:16px;
+      padding:12px 14px;
+      border:1px solid #f5e0b8;
+      border-radius:10px;
+      background: rgba(0,0,0,.38);
+      cursor:pointer;
+      transition: background .25s ease, transform .15s ease;
+    }
+    .columnas:hover{ background: rgba(245,224,184,.16); }
+    .columnas h2{
+      font-size:1.05rem;
+      line-height:1.25;
+      margin:0 0 6px;
+    }
+    .summary{
+      font-size:.92rem;
+      margin:0;
+      color:#d8c6a5;
+    }
+    .date{
+      font-size:.85rem;
+      color:#bda986;
+      margin:4px 0 0 0;
+      opacity:.95;
+    }
+
+    /* ====== ÁREA DEL IFRAME ====== */
+    .iframe-container{
+      display:none;
+      margin-top:14px;
+    }
+
+    .tools{
+      display:flex;
+      gap:8px;
+      justify-content:flex-end;
+      margin:10px 0;
+    }
+    .btn{
+      padding:8px 16px;
+      border:2px solid #f5e0b8;
+      border-radius:6px;
+      color:#f5e0b8;
+      background:transparent;
+      font-size:.9rem;
+      text-decoration:none;
+      cursor:pointer;
+      transition:.2s;
+    }
+    .btn:hover{ background:#f5e0b8; color:#2c1a08; }
+
+    iframe{
+      width:100%;
+      height:800px;
+      border:none;
+      display:block;
+      background:transparent;
+    }
+
+    footer{
+      text-align:center;
+      font-size:.8rem;
+      margin: 28px 0 18px;
+      color:#d8c6a5;
+      opacity:.85;
+      line-height: 1rem; /* compacto en 2 líneas */
+    }
+    footer p{ margin:0; }
+
+    /* ====== MÓVIL ====== */
+    @media (max-width:600px){
+      body{
+        background-image: url("../img/fondocel2.png");
+        background-position: center top;
+        background-size: cover;
+        background-attachment: fixed;
+        background-color:#0b0a09;
+      }
+
+      .container{
+        max-width: 90%;
+        padding: 20px 14px;
+        margin: 22px auto;
+        border-radius: 10px;
+      }
+
+      h1{ font-size: 1.6rem; margin-bottom:18px; }
+      .columnas{ padding:10px 12px; }
+      .columnas h2{ font-size: 1rem; }
+      .summary{ font-size: .9rem; }
+
+      .tools{ gap:6px; }
+      .btn{ padding:7px 14px; font-size:.88rem; }
+
+      iframe{ height: 70vh; }
+    }
+  </style>
 </head>
 <body>
   <div class="container">
@@ -149,8 +155,9 @@
 
     <!-- Columna 1 -->
     <div class="columnas" onclick="mostrarIframe('iframe1')">
-      <h2>Se acabó la deuda externa : 28 de agosto de 2025</h2>
-      <p>Si puedes leer esto, ya ocurrió un milagro</p>
+      <h2>Se acabó la deuda externa</h2>
+      <p class="summary">Si puedes leer esto, ya ocurrió un milagro</p>
+      <p class="date">28 de agosto de 2025</p>
     </div>
     <div class="iframe-container" id="iframe1">
       <div class="tools">
@@ -162,8 +169,9 @@
 
     <!-- Columna 2 -->
     <div class="columnas" onclick="mostrarIframe('iframe2')">
-      <h2>Ramón y Cajal se volvería a morir : 25 de agosto de 2025</h2>
-      <p>Pensar duele... pero dejar de pensar mata</p>
+      <h2>Ramón y Cajal se volvería a morir</h2>
+      <p class="summary">Pensar duele... pero dejar de pensar mata</p>
+      <p class="date">25 de agosto de 2025</p>
     </div>
     <div class="iframe-container" id="iframe2">
       <div class="tools">
@@ -175,8 +183,9 @@
 
     <!-- Columna 3 -->
     <div class="columnas" onclick="mostrarIframe('iframe3')">
-      <h2>IA: ¿fin o principio? : 13 de agosto de 2025</h2>
-      <p>No compitas con el algoritmo: dirige lo que no puede sentir</p>
+      <h2>IA: ¿fin o principio?</h2>
+      <p class="summary">No compitas con el algoritmo: dirige lo que no puede sentir</p>
+      <p class="date">13 de agosto de 2025</p>
     </div>
     <div class="iframe-container" id="iframe3">
       <div class="tools">
@@ -188,8 +197,9 @@
 
     <!-- Columna 4 -->
     <div class="columnas" onclick="mostrarIframe('iframe4')">
-      <h2>IA: ¿Puente al Futuro o Candado al Silencio? : 1 de agosto de 2025</h2>
-      <p>¿Podrá la IA vencer la censura?</p>
+      <h2>IA: ¿Puente al Futuro o Candado al Silencio?</h2>
+      <p class="summary">¿Podrá la IA vencer la censura?</p>
+      <p class="date">1 de agosto de 2025</p>
     </div>
     <div class="iframe-container" id="iframe4">
       <div class="tools">
@@ -201,8 +211,9 @@
 
     <!-- Columna 5 -->
     <div class="columnas" onclick="mostrarIframe('iframe5')">
-      <h2>No culpes al espejo : 19 de junio de 2025</h2>
-      <p>La inteligencia artificial como reflejo y brújula de nuestra sociedad</p>
+      <h2>No culpes al espejo</h2>
+      <p class="summary">La inteligencia artificial como reflejo y brújula de nuestra sociedad</p>
+      <p class="date">19 de junio de 2025</p>
     </div>
     <div class="iframe-container" id="iframe5">
       <div class="tools">
@@ -213,8 +224,8 @@
     </div>
   </div>
 
-    <footer>
-    <p>© Guillermo Garcia Muela.</p>
+  <footer>
+    <p>© Guillermo García Muela.</p>
     <p>Todos los derechos reservados.</p>
   </footer>
 
