--- a/columnas/vida.html
+++ b/columnas/vida.html
@@ -19,7 +19,7 @@
 
     /* ===== Contenedor ===== */
     .container{
-      max-width: 820px;        /* más estrecho y elegante */
+      max-width: 820px;
       margin: 32px auto;
       padding: 28px 18px;
       background: rgba(0,0,0,.55);
@@ -62,10 +62,16 @@
       line-height:1.25;
       margin:0 0 6px;
     }
-    .card p{
+    .card p{ margin:0; }
+    .summary{
       font-size:.92rem;
-      margin:0;
       color:#d8c6a5;
+    }
+    .date{
+      font-size:.85rem;
+      color:#bda986;
+      margin-top:4px;
+      opacity:.95;
     }
 
     /* ===== Iframe + herramientas ===== */
@@ -94,20 +100,21 @@
       height:800px;
       border:none;
       display:block;
-      background:transparent;   /* sin fondo gris */
+      background:transparent;
     }
 
     footer{
       text-align:center;
       font-size:.8rem;
+      margin: 28px 0 18px;
       color:#d8c6a5;
-      margin:28px 0 18px;
       opacity:.85;
+      line-height: 1rem;
     }
+    footer p{ margin:0; }
 
     /* ===== Móvil ===== */
     @media (max-width:600px){
-      /* fondo diferente en móvil */
       body{
         background-image: url("../img/fondocel2.png");
         background-position: center top;
@@ -124,11 +131,11 @@
       h1{ font-size:1.6rem; margin-bottom:18px; }
       .card{ padding:10px 12px; }
       .card h2{ font-size:1rem; }
-      .card p{ font-size:.9rem; }
+      .summary{ font-size:.9rem; }
 
       .tools{ gap:6px; }
       .btn{ padding:7px 14px; font-size:.88rem; }
-      iframe{ height:70vh; }  /* más compacto en móvil */
+      iframe{ height:70vh; }
     }
   </style>
 </head>
@@ -140,10 +147,11 @@
       <a href="../index.html">← Volver al menú principal</a>
     </div>
 
-    <!-- Columna 1 (31 agosto) -->
+    <!-- Columna 1 -->
     <div class="card" onclick="mostrarIframe('iframe0')">
-      <h2>¿Qué le preguntarías a Dios? : 31 de agosto de 2025</h2>
-      <p>Si solo pudieras hacerle una pregunta a Dios, ¿le pedirías una respuesta o una explicación?</p>
+      <h2>¿Qué le preguntarías a Dios?</h2>
+      <p class="summary">Si solo pudieras hacerle una pregunta a Dios, ¿le pedirías una respuesta o una explicación?</p>
+      <p class="date">31 de agosto de 2025</p>
     </div>
     <div class="iframe-container" id="iframe0">
       <div class="tools">
@@ -153,10 +161,11 @@
       <iframe src="https://drive.google.com/file/d/13d5SCFMizbRzO9bZOoQ0geAAxcZ8XF_K/preview"></iframe>
     </div>
 
-    <!-- Columna 2 (22 agosto) -->
+    <!-- Columna 2 -->
     <div class="card" onclick="mostrarIframe('iframe1')">
-      <h2>Me dejaste en visto : 22 de agosto de 2025</h2>
-      <p>El eco emocional que nadie se atreve a confesar</p>
+      <h2>Me dejaste en visto</h2>
+      <p class="summary">El eco emocional que nadie se atreve a confesar</p>
+      <p class="date">22 de agosto de 2025</p>
     </div>
     <div class="iframe-container" id="iframe1">
       <div class="tools">
@@ -166,10 +175,11 @@
       <iframe src="https://drive.google.com/file/d/18MoIytokJPIahH5-6GWdurG19mDrSE3m/preview"></iframe>
     </div>
 
-    <!-- Columna 3 (19 agosto) -->
+    <!-- Columna 3 -->
     <div class="card" onclick="mostrarIframe('iframe2')">
-      <h2>10 de febrero, hoy : 19 de agosto de 2025</h2>
-      <p>Einstein tenía razón: cuando aparece la aseguradora, el tiempo colapsa</p>
+      <h2>10 de febrero, hoy</h2>
+      <p class="summary">Einstein tenía razón: cuando aparece la aseguradora, el tiempo colapsa</p>
+      <p class="date">19 de agosto de 2025</p>
     </div>
     <div class="iframe-container" id="iframe2">
       <div class="tools">
@@ -179,10 +189,11 @@
       <iframe src="https://drive.google.com/file/d/1h4WABN3hyi_DtwmnXRVqTuuy4zGSpwG8/preview"></iframe>
     </div>
 
-    <!-- Columna 4 (16 agosto) -->
+    <!-- Columna 4 -->
     <div class="card" onclick="mostrarIframe('iframe3')">
-      <h2>Hambre de Caricias : 16 de agosto de 2025</h2>
-      <p>Cuando lo anormal se volvió rutina y empezó a doler</p>
+      <h2>Hambre de Caricias</h2>
+      <p class="summary">Cuando lo anormal se volvió rutina y empezó a doler</p>
+      <p class="date">16 de agosto de 2025</p>
     </div>
     <div class="iframe-container" id="iframe3">
       <div class="tools">
@@ -192,10 +203,11 @@
       <iframe src="https://drive.google.com/file/d/1-sXQt8XZ3i_exlvKjsjywpjNehtQdIQb/preview"></iframe>
     </div>
 
-    <!-- Columna 5 (10 agosto) -->
+    <!-- Columna 5 -->
     <div class="card" onclick="mostrarIframe('iframe4')">
-      <h2>No quiero morirme (todavía) : 10 de agosto de 2025</h2>
-      <p>¿Más años de vida o más vida a los años?</p>
+      <h2>No quiero morirme (todavía)</h2>
+      <p class="summary">¿Más años de vida o más vida a los años?</p>
+      <p class="date">10 de agosto de 2025</p>
     </div>
     <div class="iframe-container" id="iframe4">
       <div class="tools">
@@ -205,10 +217,11 @@
       <iframe src="https://drive.google.com/file/d/1jQqE7yJkiMrAVoA0fXaerqMNx3hCaVJA/preview"></iframe>
     </div>
 
-    <!-- Columna 6 (04 agosto) -->
+    <!-- Columna 6 -->
     <div class="card" onclick="mostrarIframe('iframe5')">
-      <h2>Déficit de INTENCIÓN : 04 de agosto de 2025</h2>
-      <p>Cuando el problema no es atención, sino rumbo</p>
+      <h2>Déficit de INTENCIÓN</h2>
+      <p class="summary">Cuando el problema no es atención, sino rumbo</p>
+      <p class="date">04 de agosto de 2025</p>
     </div>
     <div class="iframe-container" id="iframe5">
       <div class="tools">
@@ -219,8 +232,8 @@
     </div>
   </div>
 
-    <footer>
-    <p>© Guillermo Garcia Muela.</p>
+  <footer>
+    <p>© Guillermo García Muela.</p>
     <p>Todos los derechos reservados.</p>
   </footer>
 
