Actualización de nuevas columnas 03 y 06 Septiembre

--- a/columnas/vida.html
+++ b/columnas/vida.html
@@ -147,6 +147,34 @@
       <a href="../index.html">← Volver al menú principal</a>
     </div>
 
+    <!-- 🔹 NUEVA Columna (más reciente) – 6 de septiembre de 2025 -->
+    <div class="card" onclick="mostrarIframe('iframe7')">
+      <h2>Nunca es tarde, hasta que lo es.</h2>
+      <p class="summary">No fue falta de tiempo, fue exceso de excusas calendarizadas.</p>
+      <p class="date">6 de septiembre de 2025</p>
+    </div>
+    <div class="iframe-container" id="iframe7">
+      <div class="tools">
+        <a href="https://drive.google.com/file/d/1H3gfMTuaL_i-kiIi8oWh1wpTJzohDr-l/view" target="_blank" rel="noopener" class="btn">↗ Abrir</a>
+        <button class="btn" onclick="cerrarIframe('iframe7')">✖ Cerrar</button>
+      </div>
+      <iframe src="https://drive.google.com/file/d/1H3gfMTuaL_i-kiIi8oWh1wpTJzohDr-l/preview"></iframe>
+    </div>
+
+    <!-- 🔹 NUEVA Columna – 3 de septiembre de 2025 -->
+    <div class="card" onclick="mostrarIframe('iframe6')">
+      <h2>Cuando él quizá te cobre intereses</h2>
+      <p class="summary">Decir NO a tiempo salva más de lo que uno ya verá.</p>
+      <p class="date">3 de septiembre de 2025</p>
+    </div>
+    <div class="iframe-container" id="iframe6">
+      <div class="tools">
+        <a href="https://drive.google.com/file/d/11f0wS9jK57YFQ1CGt_s9yunFJ4HuKkTY/view" target="_blank" rel="noopener" class="btn">↗ Abrir</a>
+        <button class="btn" onclick="cerrarIframe('iframe6')">✖ Cerrar</button>
+      </div>
+      <iframe src="https://drive.google.com/file/d/11f0wS9jK57YFQ1CGt_s9yunFJ4HuKkTY/preview"></iframe>
+    </div>
+
     <!-- Columna 1 -->
     <div class="card" onclick="mostrarIframe('iframe0')">
       <h2>¿Qué le preguntarías a Dios?</h2>
