feat: actualización 09 y 13 de Septiembre 2025

--- a/columnas/ia.html
+++ b/columnas/ia.html
@@ -153,6 +153,20 @@
       <a href="../index.html">← Volver al menú principal</a>
     </div>
 
+    <!-- 🔹 NUEVA Columna (más reciente) -->
+    <div class="columnas" onclick="mostrarIframe('iframe6')">
+      <h2>Micrófono invisible activador</h2>
+      <p class="summary">La IA ya capta tu habla interna; la pregunta es quién apaga</p>
+      <p class="date">12 de septiembre de 2025</p>
+    </div>
+    <div class="iframe-container" id="iframe6">
+      <div class="tools">
+        <a class="btn" href="https://drive.google.com/file/d/1H8CfDgBUfBC0HkrXZryBqYXPlm7XnlWN/view" target="_blank" rel="noopener">↗ Abrir</a>
+        <button class="btn" onclick="cerrarIframe('iframe6')">✖ Cerrar</button>
+      </div>
+      <iframe src="https://drive.google.com/file/d/1H8CfDgBUfBC0HkrXZryBqYXPlm7XnlWN/preview"></iframe>
+    </div>
+
     <!-- Columna 1 -->
     <div class="columnas" onclick="mostrarIframe('iframe1')">
       <h2>Se acabó la deuda externa</h2>
