--- a/columnas/vida.html
+++ b/columnas/vida.html
@@ -147,7 +147,21 @@
       <a href="../index.html">← Volver al menú principal</a>
     </div>
 
-    <!-- 🔹 NUEVA Columna (más reciente) – 6 de septiembre de 2025 -->
+    <!-- 🔹 NUEVA Columna (más reciente) – 9 de septiembre de 2025 -->
+    <div class="card" onclick="mostrarIframe('iframe8')">
+      <h2>La mentira más sincera: Tu memoria.</h2>
+      <p class="summary">No guarda hechos; conserva cicatrices y alivios.</p>
+      <p class="date">9 de septiembre de 2025</p>
+    </div>
+    <div class="iframe-container" id="iframe8">
+      <div class="tools">
+        <a href="https://drive.google.com/file/d/1oB8dYHAXTQrIsDS8gYkyx1MKan7Jl_q2/view" target="_blank" rel="noopener" class="btn">↗ Abrir</a>
+        <button class="btn" onclick="cerrarIframe('iframe8')">✖ Cerrar</button>
+      </div>
+      <iframe src="https://drive.google.com/file/d/1oB8dYHAXTQrIsDS8gYkyx1MKan7Jl_q2/preview"></iframe>
+    </div>
+
+    <!-- 🔹 NUEVA Columna – 6 de septiembre de 2025 -->
     <div class="card" onclick="mostrarIframe('iframe7')">
       <h2>Nunca es tarde, hasta que lo es.</h2>
       <p class="summary">No fue falta de tiempo, fue exceso de excusas calendarizadas.</p>
