--- a/index.html
+++ b/index.html
@@ -8,13 +8,28 @@
   <!-- CSS principal -->
   <link rel="stylesheet" href="./css/style.css?v=16" />
 
-  <!-- SEO + OG -->
+  <!-- SEO + Open Graph -->
   <meta name="description" content="Repositorio de columnas de opinión de Guillermo García Muela." />
+  <link rel="canonical" href="https://garciamuela.com/" />
+
+  <meta property="og:site_name" content="GarcíaMuela.com" />
   <meta property="og:title" content="Repositorio de Columnas de Opinión" />
   <meta property="og:description" content="Consulta las columnas por mes." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="./img/firma.png" />
+  <meta property="og:url" content="https://garciamuela.com/" />
+
+  <!-- ✅ Foto del autor (URL absoluta) -->
+  <meta property="og:image" content="https://garciamuela.com/img/autor.jpeg?v=5" />
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
   <meta property="og:locale" content="es_MX" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Repositorio de Columnas de Opinión" />
+  <meta name="twitter:description" content="Consulta las columnas por mes." />
+  <meta name="twitter:image" content="https://garciamuela.com/img/autor.jpeg?v=5" />
 
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-BQ7HQRTWPS"></script>
